VZDEV/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CCPM_closedLeadSource__c</fullName>
        <description>The system from which the lead has closed</description>
        <inlineHelpText>This represents the close source system of the lead or prospect</inlineHelpText>
        <label>Closed Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATG-ECOM-DESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGDESK</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGMOB</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-GGTAB</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MAPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MDOT</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-MIPP</fullName>
                </value>
                <value>
                    <fullName>ATG-ECOM-TDOT</fullName>
                </value>
                <value>
                    <fullName>NETACE</fullName>
                </value>
                <value>
                    <fullName>ONEPOS</fullName>
                </value>
                <value>
                    <fullName>ACSS</fullName>
                </value>
                <value>
                    <fullName>EROES</fullName>
                </value>
                <value>
                    <fullName>NR-APPL</fullName>
                </value>
                <value>
                    <fullName>NR-BEST</fullName>
                </value>
                <value>
                    <fullName>NR-TARG</fullName>
                </value>
                <value>
                    <fullName>NR-BBDT</fullName>
                </value>
                <value>
                    <fullName>MFRAPP</fullName>
                </value>
                <value>
                    <fullName>DOTCOM</fullName>
                </value>
                <value>
                    <fullName>NR-APDT</fullName>
                </value>
                <value>
                    <fullName>QUOTE-TELESALES</fullName>
                </value>
                <value>
                    <fullName>QUOTE-RETAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_closed_Lead_Channel__c</fullName>
        <inlineHelpText>This represents the closed channel of the lead or prospect</inlineHelpText>
        <label>Closed Lead Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_communicationPreference__c</fullName>
        <description>Shows preferred communication method</description>
        <inlineHelpText>SMS, Phone, Email</inlineHelpText>
        <label>Communication Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_confirmEmail__c</fullName>
        <description>Confirm Email address specified by the customer when creating the cart</description>
        <label>Confirm Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCPM_confirmMTN__c</fullName>
        <description>Confirm Mobile number which has been used to create the cart</description>
        <label>Confirm MTN</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_consentChannelSigned__c</fullName>
        <label>Consent Channel Signed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_consentTimestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_conversionEligible__c</fullName>
        <formula>IF(AND(((CCPM_createdChannel__c)=&apos;Telesales&apos;), (CCPM_SMSFollowUpDate__c&gt;CreatedDate)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_convertedCartSKUs__c</fullName>
        <label>Converted Cart SKUs</label>
        <length>1200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_convertedCartType__c</fullName>
        <label>Converted Cart Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_convertedDateTime__c</fullName>
        <description>Timestamp for leads that are converted.</description>
        <inlineHelpText>Timestamp for leads that are converted.</inlineHelpText>
        <label>Converted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_createdChannel__c</fullName>
        <description>The field shows the created channel on the prospect</description>
        <inlineHelpText>This represents the initial channel of the lead or prospect upon creation</inlineHelpText>
        <label>Created Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_createdDate__c</fullName>
        <label>Cart Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_createdMonth__c</fullName>
        <formula>CASE(MONTH(datevalue(CreatedDate)), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_creditApplicationNo__c</fullName>
        <description>Credit application number</description>
        <label>Credit Application No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_creditClass__c</fullName>
        <description>Credit Class of the credit application</description>
        <label>Credit Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_crmLeadKeyID__c</fullName>
        <externalId>true</externalId>
        <label>CRM Lead Key ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_currentCarrier__c</fullName>
        <label>Current Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T Wireless</fullName>
                </value>
                <value>
                    <fullName>Cricket</fullName>
                </value>
                <value>
                    <fullName>Nextel</fullName>
                </value>
                <value>
                    <fullName>Sprint (PCS)</fullName>
                </value>
                <value>
                    <fullName>T-Mobile</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_customerAndLeadCombinedScoreFormula__c</fullName>
        <description>Score from Lead (Calculated via WF Rule) + Score from Customer (Calculated via WF Rule)</description>
        <formula>CCPM_leadScoreFormula__c + CCPM_Account__r.CCPM_customerScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_dateAndTimeConsentAgreed__c</fullName>
        <description>Date and Time consent was agreed</description>
        <label>Date and Time Consent was agreed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_email__c</fullName>
        <description>Email address specified by the customer when creating the cart</description>
        <encrypted>true</encrypted>
        <inlineHelpText>Email of the lead / prospect. Required to save a Prospect if the MTN is unavailable.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCPM_eventDate__c</fullName>
        <label>Event Date(DO NOT USE)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_eventTypeCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This will Relate a Lead record to a single Event Type record from the campaign object.</inlineHelpText>
        <label>Event Type</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>CCPM_leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_eventTypeLabel__c</fullName>
        <formula>IF(ISBLANK(CCPM_eventTypeCampaign__c) ,   TEXT(CCPM_eventType__c) ,  CCPM_eventTypeCampaign__r.CCPM_eventLabel__c )</formula>
        <inlineHelpText>The Conversation Topic that requires an SMS follow up to be sent.</inlineHelpText>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventType__c</fullName>
        <inlineHelpText>The Conversation Topic that requires an SMS follow up to be sent.</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Samsung GS9 BOGO</fullName>
                </value>
                <value>
                    <fullName>TMP OE - Q2 2018</fullName>
                </value>
                <value>
                    <fullName>Add a Line</fullName>
                </value>
                <value>
                    <fullName>Confirming with Family First</fullName>
                </value>
                <value>
                    <fullName>Connected Device</fullName>
                </value>
                <value>
                    <fullName>Contract Terminating Soon</fullName>
                </value>
                <value>
                    <fullName>Feature Add</fullName>
                </value>
                <value>
                    <fullName>Gift for Upcoming Occasion</fullName>
                </value>
                <value>
                    <fullName>iPhone X</fullName>
                </value>
                <value>
                    <fullName>iPhone X send message</fullName>
                </value>
                <value>
                    <fullName>New Service</fullName>
                </value>
                <value>
                    <fullName>Other Event</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Special Event</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_event__c</fullName>
        <label>Event(DO NOT USE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Terminating Soon</fullName>
                </value>
                <value>
                    <fullName>Confirming with Family First</fullName>
                </value>
                <value>
                    <fullName>Gift for Upcoming occasion</fullName>
                </value>
                <value>
                    <fullName>Other event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_expiryDate__c</fullName>
        <description>Date when lead is set to expire, set to 30 days from date 1st SMS was sent</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPM_finalPreDefinedResponse__c</fullName>
        <label>Final Pre Defined Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok, thank you! Have a great day.</fullName>
                </value>
                <value>
                    <fullName>Ok, I’ll be reaching out to you via phone, shortly.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_finalPreDefinedSMSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Pre Defined SMS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_firstPreDefinedResponse__c</fullName>
        <label>First PreDefined Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ok, thanks! Please call our customer service department at 1-800-922-0204.</fullName>
                </value>
                <value>
                    <fullName>Ok, thanks! We will make the necessary changes.</fullName>
                </value>
                <value>
                    <fullName>Ok, thank you! Have a great day.</fullName>
                </value>
                <value>
                    <fullName>Yes, thank you! See you then.</fullName>
                </value>
                <value>
                    <fullName>Ok, I’ll be reaching out to you via phone, shortly.</fullName>
                </value>
                <value>
                    <fullName>What would be the best time to follow up with you via phone call?</fullName>
                </value>
                <value>
                    <fullName>-- None --</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ok, I’ll be reaching out to you via phone, shortly. (FreeVzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ok, thank you! Have a great day. (FreeVzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ok, thanks! Please call our customer service department at 1-800-922-0204. (Free VzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ok, thanks! We will make the necessary changes. (FreeVzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ok, we will dismiss your cart. (FreeVzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Yes, thank you! See you then. (FreeVzMsg)</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_firstPredefinedSMSFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Predefined SMS Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_followUpSMSDate__c</fullName>
        <description>Records date/time when follow up SMS was sent</description>
        <label>Follow-Up SMS Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_followUpSMSSentDateTime__c</fullName>
        <description>Records date/time when follow up SMS was sent</description>
        <label>Follow-Up SMS Sent Date/Time(DO NOT USE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_followupMessageBody__c</fullName>
        <description>This formula field builds up the follow up message for a customer.</description>
        <formula>&quot;Hi, this is &quot;+ Owner:User.FirstName +&quot; from Verizon. I&apos;m just following up on my earlier message. If you are interested in visiting a store please let me know! (FreeVzMsg)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Follow-Up Message Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_informaticaMergeLeadType__c</fullName>
        <description>Informatica populates the lead type on every update.</description>
        <label>Informatica Merge Lead Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_initialMessageBodyPartII__c</fullName>
        <description>2nd part of initial message body so that customer does not receive single message cut-off message</description>
        <formula>&apos;Would you like me to book an appt &apos;+Store__r.CCPM_recommendedVisitingHours__c+&apos; to visit my store? If not, what time/day works for you? Reply &quot;X&quot; to stop msgs (FreeVzMsg).&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Message Body Part II</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_initialMessageBodyPartI__c</fullName>
        <description>Body of the initial SMS which needs to sent to customer 4 hours after cart has been created</description>
        <formula>&quot;Hi, &quot;+Owner:User.FirstName + &quot; here from Verizon. Come visit us at the &quot;+Store__r.Name + &quot; store to chat about the great items saved in your cart (FreeVzMsg)&quot;</formula>
        <label>Initial Message Body Part I</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_initialOwnershipAssignmentMsgBody__c</fullName>
        <formula>&apos;Hi &apos;+  Owner:User.FirstName +&apos;, a new lead has been assigned to you. Please login to Salesforce1 on your iPad and view &quot;leads&quot; to review in more detail.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Ownership Assignment Msg Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_initialSMSBody__c</fullName>
        <formula>&apos;Hi, this is &apos;+Owner:User.FirstName + &apos; here from Verizon. Come visit us at the &apos;+Store__r.Name + &apos; store to chat about the great items saved in your cart. (FreeVzMsg)%&apos;+&apos;Would you like me to book an appt &apos;+Store__r.CCPM_recommendedVisitingHours__c+&apos; to visit my store? If not, what time/day works? Reply &quot;E&quot; to unsubscribe to this message.(FreeVzMsg)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial SMS Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_initialSMSFailCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times &quot;Initial SMS sent failed&quot; condition</description>
        <label>Initial SMS Fail Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_initialSMSSentDateTime__c</fullName>
        <description>Records date/time when initial SMS was sent</description>
        <label>Initial SMS Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_isCampaignLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>the field is checked when the lead is a Campaign Lead</description>
        <inlineHelpText>check the field if the lead is a Campaign Lead</inlineHelpText>
        <label>Campaign Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isFollowUpSMSSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if follow up SMS was sent</description>
        <inlineHelpText>Has a follow up SMS been sent to encourage the individual to visit a Verizon store?</inlineHelpText>
        <label>Follow-Up SMS Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isInformaticaMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Informatica Merge Flag</description>
        <inlineHelpText>Informatica Merge Flag. this will be checked by Informatica Feed when there is an update to the existing cart  with new cart details (Merge Scenarios)</inlineHelpText>
        <label>Informatica Merge ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isInitialSMSSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an initial SMS been sent to encourage the individual to visit a Verizon store?</description>
        <inlineHelpText>Has an initial SMS been sent to encourage the individual to visit a Verizon store?</inlineHelpText>
        <label>Initial SMS Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isLeadOwnerActive__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isMTNAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box to determine if a MTN is available for the lead</description>
        <label>MTN Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isManualLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if Prospect is Embedded Account</description>
        <inlineHelpText>if check Prospect is Embedded Account</inlineHelpText>
        <label>Manual Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isMergedUIFlag__c</fullName>
        <description>Merged Record</description>
        <formula>IF(OR( CCPM_isMerged__c, CCPM_isInformaticaMerge__c ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Merged Record</inlineHelpText>
        <label>Merged Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Merged?</description>
        <inlineHelpText>This flag is automatically checked during the merge process once we merge the child lead</inlineHelpText>
        <label>Merged ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isOwnershipChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if ownership has changed - populated via trigger</description>
        <label>Ownership Changed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isProspectSMSsent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whethet Prospect 1st SMS was sent.</description>
        <inlineHelpText>Has an Event SMS been sent based off the Event based SMS and event date selected?</inlineHelpText>
        <label>Event SMS sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isRepEcodeMatching__c</fullName>
        <description>This  is to check if the owner ecode matches the Cart Last Handled by field updated by informatica. This is created for Commission Eligible feature. This is used in Report.</description>
        <formula>(CCPM_cartlastHandledBy__c  =  CCPM_ownerEcode__c) &amp;&amp; NOT(ISBLANK(CCPM_cartlastHandledBy__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Rep Ecode Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isSMSResponseReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the individual responded to any of the Verizon communications?</description>
        <inlineHelpText>Has the individual responded to any of the Verizon communications?</inlineHelpText>
        <label>SMS Response Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isStoreEmployeeUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Employee Updated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_itemInterestedIn__c</fullName>
        <inlineHelpText>Phone, Tablet, Accessory</inlineHelpText>
        <label>Item Interested In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_lastInteractionDateTime__c</fullName>
        <description>Date/Time being recorded for last interaction between the customer and Heywire process in salesforce</description>
        <label>Last Interaction Date/Time (DO NOT USE)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_lastInteraction__c</fullName>
        <description>Date/Time being recorded for last interaction between the customer and Heywire process in salesforce</description>
        <label>Last Interaction Date/TIme</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_lastPromoSent__c</fullName>
        <label>Last Promo Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadChannel__c</fullName>
        <description>IF the &apos;Lead Source&apos; field value equals ATG-ECOM-DESK or ATG-ECOM-GGDESK or ATG-ECOM-GGMOB or ATG-ECOM-GGTAB or ATG-ECOM-MAPP or ATG-ECOM-MDOT or ATG-ECOM-MIPP or ATG-ECOM-TDOT then &apos;Lead Channel&apos; should be set as &apos;Digital&apos;
IF the &apos;Lead Source&apos; field value equals NETACE then &apos;Lead Channel&apos; should be set as &apos;Retail&apos;</description>
        <formula>IF(CONTAINS(TEXT(CCPM_leadType__c),&quot;Telesale&quot;),&apos;Telesales&apos;,
IF(CONTAINS(TEXT(LeadSource),&quot;ATG-ECOM&quot;),&apos;Digital&apos;,
IF(
OR(ISPICKVAL(LeadSource,&apos;NETACE&apos;), ISPICKVAL(LeadSource,&apos;Quote-Retail&apos;),ISPICKVAL(LeadSource,&apos;POS-Store Visit&apos;),ISPICKVAL(LeadSource,&apos;CRM&apos;),CONTAINS(TEXT(CCPM_leadType__c),&quot;Manual&quot;)
), &quot;Retail&quot;, &quot;&quot;
)
)
)</formula>
        <inlineHelpText>The channel the prospect abandoned cart in.</inlineHelpText>
        <label>Current Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadOwnerCheck__c</fullName>
        <description>Checks if the lead owner is the current logged in user</description>
        <formula>if(OwnerId=$User.Id,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if the lead owner is the current logged in user</inlineHelpText>
        <label>Lead Owner Check ?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadOwner__c</fullName>
        <description>Formula to get full name of lead owner to display in list view. List view only shows owner alias or last name / first name but not the full name of the lead owner</description>
        <formula>TRIM(Owner:User.FirstName + &apos; &apos; + Owner:User.LastName)</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadScoreFormula__c</fullName>
        <description>Score of lead</description>
        <label>Lead Score Formula</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_leadScoreRating__c</fullName>
        <description>Lead Score Rating Formula : 
If lead score is below 0.99 THEN icon: /img/samples/stars_000.gif
If lead score is between 1 and 2.99 THEN icon: /img/samples/stars_100.gif 
If lead score is between 3 and 4.99 THEN icon: /img/samples/stars_200.gif
If lead score is between 5 and 6.99 THEN icon: /img/samples/stars_300.gif
If lead score is between 7 and 8.99 THEN icon: /img/samples/stars_400.gif
If lead score is greater than 9 THEN icon: /img/samples/stars_500.gif</description>
        <formula>IF( CCPM_customerAndLeadCombinedScoreFormula__c &lt; 1, 
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;Lead Score&quot;),
IF( (1&lt;= CCPM_customerAndLeadCombinedScoreFormula__c) &amp;&amp; (CCPM_customerAndLeadCombinedScoreFormula__c &lt; 3),
IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;Lead Score&quot;),
IF( (3&lt;= CCPM_customerAndLeadCombinedScoreFormula__c) &amp;&amp; (CCPM_customerAndLeadCombinedScoreFormula__c &lt; 5),
IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;Lead Score&quot;),
IF( (5&lt;= CCPM_customerAndLeadCombinedScoreFormula__c) &amp;&amp; (CCPM_customerAndLeadCombinedScoreFormula__c &lt; 7),
IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;Lead Score&quot;),
IF( (7&lt;= CCPM_customerAndLeadCombinedScoreFormula__c) &amp;&amp; (CCPM_customerAndLeadCombinedScoreFormula__c &lt; 9),
IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;Lead Score&quot;),
IF( (CCPM_customerAndLeadCombinedScoreFormula__c &gt;= 9),
IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;Lead Score&quot;),
null
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How likely is this individual to purchase from Verizon - the more stars, the more likely they are to purchase.</inlineHelpText>
        <label>Lead Score Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadSubStatus__c</fullName>
        <description>This field is used to store the Lead Sub Status</description>
        <inlineHelpText>Populated when the status is “Responded” or “Qualified”</inlineHelpText>
        <label>Lead Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
                <value>
                    <fullName>Action Required</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Needs Store Reassignment</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Disinterested</fullName>
                </value>
                <value>
                    <fullName>Cart-Disinterested</fullName>
                </value>
                <value>
                    <fullName>Cart Opt Out</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>